--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ tiddlers/$__config_ViewToolbarButtons_Visibility_$__core_ui_Buttons_close.tid
 tiddlers/$__config_ViewToolbarButtons_Visibility_$__plugins_oeyoews_copy-title_copybutton.tid
 tiddlers/$__config_ViewToolbarButtons_Visibility_$__core_ui_Buttons_more-tiddler-actions.tid
 tiddlers/$__config_ViewToolbarButtons_Visibility_$__core_ui_Buttons_edit.tid
+tiddlers/lock-button.tid
